Setting up Travis and Coverall (#5)
* added travis configuration

* rspec init

* coveralls set up

* removed rspec gem

* travis and coveralls set up

--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,11 @@
 /yarn-error.log
 
 .byebug_history
-.DS_Store
 .idea
+
+# Exclude coverage reports from version control
+coverage/
+coverage/*
+
+# OSX files
+.DS_Store
